--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,11 @@
 [build]
-  publish = "public"
-  command = "# no build command needed for PHP"
+  publish = "dist"
+  command = "mkdir -p dist && cp -r public/* dist/ && cp -r templates dist/"
 
 [[redirects]]
   from = "/*"
-  to = "/index.php"
+  to = "/index.html"
   status = 200
 
 [build.environment]
-  PHP_VERSION = "8.1"
+  NODE_VERSION = "16"
