--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "dist"
-  command = "mkdir -p dist && cp -r public/* dist/ && cp -r templates dist/"
+  command = "mkdir -p dist && cp -r public/* dist/"
 
 [[redirects]]
   from = "/*"
